changes-to-page

--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/person.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="AJ Traders" />
 
-
-
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="AJ Traders" />
+    <meta property="og:description" content="Leading Jute Supplier for standing for 40+ years in Sri Lanka." />
+    <meta property="og:type" content="website" />
 
    
    
 
     
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  
 
 
 
